--- a/isOldEnoughToDrink.html
+++ b/isOldEnoughToDrink.html
@@ -25,7 +25,7 @@ Notes:* The legal drinking age in the United States is 21.
     }
     isOldEnoughToDrink(age);
     var output = isOldEnoughToDrink(age);
-    console.log(output); //not working
+    console.log(output); //not working //why??
 </script>
 </body>
 </html>
