make this function in one line and without the "if"

--- a/isOldEnoughToDrink.html
+++ b/isOldEnoughToDrink.html
@@ -6,19 +6,32 @@
 </head>
 <body>
 <!-- 
-Write a function called "isOldEnoughToDrink".
-Given a number, in this case an age, "isOldEnoughToDrink" 
-returns whether a person of this given age is old enough to legally drink in the United States.
-Notes:* The legal drinking age in the United States is 21. 
+    Write a function called "isOldEnoughToDrink".
+    Given a number, in this case an age, "isOldEnoughToDrink" 
+    returns whether a person of this given age is old enough to legally drink in the United States.
+    Notes:* The legal drinking age in the United States is 21. 
 -->
 <script>
     var age = prompt("How old are you?");
-    age = parseInt(age);
+        age = parseInt(age);
 
     function isOldEnoughToDrink(age) {
         if (age >= 21) alert("Let`s drink!");
         if (age < 21) alert("Sorry kid..");
     };
+
+    isOldEnoughToDrink(age);
+</script>
+<!-- 
+    Make this function in one line and without the "if". 
+-->
+<script>
+    var age = prompt("How old are you?");
+        age = parseInt(age);
+
+    function isOldEnoughToDrink(age) {
+        (age >= 21) ? alert("Let`s drink!") : alert("Sorry kid..");
+        };
 
     isOldEnoughToDrink(age);
 </script>
