--- a/isOldEnoughToVote.html
+++ b/isOldEnoughToVote.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>isOldEnoughToDrink</title>
+    <title>isOldEnoughToVote</title>
 </head>
 <body>
 <!-- 
@@ -13,6 +13,7 @@
 -->
 <script>
     var age = prompt("How old are you?")
+        age = parseInt(age);
     function isOldEnoughToVote(age) {
         (age >= 18) ? alert("Let`s vote!") : alert("You can`t vote yet..");
     }
